--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"mongoose": "~3.8.1",
 		"morgan": "~1.0.0",
 		"nodemon": "~1.2.0",
+		"passport": "~0.3.0",
+		"passport-google": "~0.3.0",
 		"serve-favicon": "~2.0.0"
 	}
 }
