--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"nodemon": "~1.2.0",
 		"passport": "~0.3.0",
 		"passport-google": "~0.3.0",
+		"connect-flash": "~0.1.1",
+		"express-session": "~1.0.0",
 		"serve-favicon": "~2.0.0"
 	}
 }
